--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,6 +24,7 @@
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.5.0",
 		"@types/joi": "^17.2.3",
+		"@types/lodash": "^4.14.182",
 		"@types/node": "^16.3.3",
 		"@types/supertest": "^2.0.11",
 		"dotenv-cli": "^5.1.0",
