--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,2 +1,3 @@
 PORT=5000
 DATABASE_URL="postgres://YourUserName:YourPassword@YourHostname:5432/YourDatabaseName?schema=public"
+NODE_ENV=development
